# UnknownField

./: .gitmodules  CMakeLists.txt  ObfuscateField.cpp  ObfuscateField.h  README.md  build-RelWithDebInfo.bat  build-debug.bat  build-release.bat  main.cpp  obfuscate_field.cpp  obfuscate_field.h
sdk/: UnknownFieldSDK.h
test/: test.cpp  test_UTF16_LE.cpp  test_p.cpp
test/test_p/: test_p.sln  test_p.vcxproj  test_p.vcxproj.filters
tool/: CMakeLists.txt
tool/cli/: CMakeLists.txt  UnknownField-cli.cpp
tool/gui/: gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
